--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="general.js"></script>
     </head>
-    <body>
+    <body onload="updateSpendValue()">
 
         <div class="container-fluid text-center">    
             <div class="row content">
@@ -19,8 +20,27 @@
                     <p><a href="#">Link</a></p>
                 </div>
                 <div id ="main" class="col-sm-8 text-left"> 
-                    <h1>Welcome</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div id="main-header" class="main-center">
+                        <h1>Budget</h1>
+                    </div>
+                    <hr>
+                    <div>
+                        <p class="main-center input-question" >How much do you want to spend?</p>
+                        <p class="pagination-left col-sm-4">$10</p>
+                        <p class="col-sm-4 main-center" id="spend-value">$150/week</p>
+                        <p class="pagination-right col-sm-4">$1000</p>
+                        <input type="range" min="10" max="1000" value="150" id="spend-slider" oninput="updateSpendValue()">
+                    </div>
+                    <hr>
+                    <div class="main-center">
+                        <p class="main-center input-question" >PER</p>
+                        <div class="pagination-centered col-sm-6">
+                            <input type="radio" name="interval" value="week" oninput="updateSpendValue()"><p>Week</p>
+                        </div>
+                        <div class="pagination-centered">
+                            <input type="radio" name="interval" value="month" oninput="updateSpendValue()"><p>Month</p>
+                        </div>
+                    </div>
                     <hr>
                     <h3>Test</h3>
                     <p>Lorem ipsum...</p>
